[gd_scene load_steps=111 format=2]

[ext_resource path="res://Scene/Enemy/AIScript/RangeAI.gd" type="Script" id=1]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_010.png" type="Texture" id=2]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_012.png" type="Texture" id=3]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_013.png" type="Texture" id=4]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Falling Down/0_Elementals_Falling Down_001.png" type="Texture" id=5]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Falling Down/0_Elementals_Falling Down_002.png" type="Texture" id=6]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_000.png" type="Texture" id=7]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_011.png" type="Texture" id=8]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_003.png" type="Texture" id=9]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_008.png" type="Texture" id=10]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Falling Down/0_Elementals_Falling Down_005.png" type="Texture" id=11]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_004.png" type="Texture" id=12]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_009.png" type="Texture" id=13]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_003.png" type="Texture" id=14]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Falling Down/0_Elementals_Falling Down_003.png" type="Texture" id=15]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_001.png" type="Texture" id=16]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Falling Down/0_Elementals_Falling Down_004.png" type="Texture" id=17]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Falling Down/0_Elementals_Falling Down_000.png" type="Texture" id=18]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_000.png" type="Texture" id=19]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_002.png" type="Texture" id=20]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_005.png" type="Texture" id=21]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_014.png" type="Texture" id=22]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_002.png" type="Texture" id=23]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_007.png" type="Texture" id=24]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_006.png" type="Texture" id=25]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Dying/0_Elementals_Dying_001.png" type="Texture" id=26]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_005.png" type="Texture" id=27]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_008.png" type="Texture" id=28]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_009.png" type="Texture" id=29]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_014.png" type="Texture" id=30]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_007.png" type="Texture" id=31]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_006.png" type="Texture" id=32]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_000.png" type="Texture" id=33]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_012.png" type="Texture" id=34]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_003.png" type="Texture" id=35]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_016.png" type="Texture" id=36]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_007.png" type="Texture" id=37]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_009.png" type="Texture" id=38]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_002.png" type="Texture" id=39]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_004.png" type="Texture" id=40]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_017.png" type="Texture" id=41]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Jump/0_Elementals_Jump Start_000.png" type="Texture" id=42]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_010.png" type="Texture" id=43]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_005.png" type="Texture" id=44]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Jump/0_Elementals_Jump Start_005.png" type="Texture" id=45]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Jump/0_Elementals_Jump Start_002.png" type="Texture" id=46]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Jump/0_Elementals_Jump Start_004.png" type="Texture" id=47]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_008.png" type="Texture" id=48]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Jump/0_Elementals_Jump Start_001.png" type="Texture" id=49]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_010.png" type="Texture" id=50]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_013.png" type="Texture" id=51]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Jump/0_Elementals_Jump Start_003.png" type="Texture" id=52]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_015.png" type="Texture" id=53]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_006.png" type="Texture" id=54]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_004.png" type="Texture" id=55]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_011.png" type="Texture" id=56]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Idle/0_Elementals_Idle Blinking_011.png" type="Texture" id=57]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Running/0_Elementals_Running_001.png" type="Texture" id=58]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_007.png" type="Texture" id=59]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_006.png" type="Texture" id=60]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_011.png" type="Texture" id=61]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_001.png" type="Texture" id=62]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_004.png" type="Texture" id=63]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_005.png" type="Texture" id=64]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_002.png" type="Texture" id=65]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_008.png" type="Texture" id=66]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_009.png" type="Texture" id=67]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_000.png" type="Texture" id=68]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_006.png" type="Texture" id=69]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_008.png" type="Texture" id=70]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_010.png" type="Texture" id=71]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_010.png" type="Texture" id=72]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_002.png" type="Texture" id=73]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_007.png" type="Texture" id=74]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_004.png" type="Texture" id=75]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_003.png" type="Texture" id=76]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_002.png" type="Texture" id=77]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_005.png" type="Texture" id=78]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_007.png" type="Texture" id=79]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_005.png" type="Texture" id=80]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_003.png" type="Texture" id=81]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_006.png" type="Texture" id=82]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_000.png" type="Texture" id=83]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_004.png" type="Texture" id=84]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_011.png" type="Texture" id=85]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_001.png" type="Texture" id=86]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_003.png" type="Texture" id=87]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Shoot/0_Elementals_Throwing_001.png" type="Texture" id=88]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Slashing/0_Elementals_Slashing_009.png" type="Texture" id=89]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_000.png" type="Texture" id=90]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_016.png" type="Texture" id=91]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_011.png" type="Texture" id=92]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_015.png" type="Texture" id=93]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_018.png" type="Texture" id=94]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_017.png" type="Texture" id=95]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_020.png" type="Texture" id=96]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_014.png" type="Texture" id=97]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_012.png" type="Texture" id=98]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_008.png" type="Texture" id=99]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_021.png" type="Texture" id=100]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_023.png" type="Texture" id=101]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_009.png" type="Texture" id=102]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_022.png" type="Texture" id=103]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_010.png" type="Texture" id=104]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_013.png" type="Texture" id=105]
[ext_resource path="res://Scene/Enemy/Tumatauenga/Sprite/Walking/0_Elementals_Walking_019.png" type="Texture" id=106]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 26 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 22 ) ],
"loop": true,
"name": "Dying",
"speed": 12.0
}, {
"frames": [ ExtResource( 83 ), ExtResource( 88 ), ExtResource( 65 ), ExtResource( 81 ), ExtResource( 84 ), ExtResource( 80 ), ExtResource( 69 ), ExtResource( 74 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 72 ), ExtResource( 61 ) ],
"loop": true,
"name": "Shoot",
"speed": 12.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 49 ), ExtResource( 46 ), ExtResource( 52 ), ExtResource( 47 ), ExtResource( 45 ) ],
"loop": true,
"name": "Jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 11 ) ],
"loop": true,
"name": "Falling",
"speed": 5.0
}, {
"frames": [ ExtResource( 90 ), ExtResource( 86 ), ExtResource( 73 ), ExtResource( 87 ), ExtResource( 75 ), ExtResource( 78 ), ExtResource( 60 ), ExtResource( 79 ), ExtResource( 99 ), ExtResource( 102 ), ExtResource( 104 ), ExtResource( 92 ), ExtResource( 98 ), ExtResource( 105 ), ExtResource( 97 ), ExtResource( 93 ), ExtResource( 91 ), ExtResource( 95 ), ExtResource( 94 ), ExtResource( 106 ), ExtResource( 96 ), ExtResource( 100 ), ExtResource( 103 ), ExtResource( 101 ) ],
"loop": true,
"name": "Walking",
"speed": 12.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 58 ), ExtResource( 39 ), ExtResource( 35 ), ExtResource( 55 ), ExtResource( 27 ), ExtResource( 54 ), ExtResource( 37 ), ExtResource( 28 ), ExtResource( 38 ), ExtResource( 43 ), ExtResource( 56 ) ],
"loop": true,
"name": "Running",
"speed": 12.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 62 ), ExtResource( 77 ), ExtResource( 76 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 82 ), ExtResource( 59 ), ExtResource( 70 ), ExtResource( 89 ), ExtResource( 71 ), ExtResource( 85 ) ],
"loop": true,
"name": "Slashing",
"speed": 12.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 14 ), ExtResource( 40 ), ExtResource( 44 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 48 ), ExtResource( 29 ), ExtResource( 50 ), ExtResource( 57 ), ExtResource( 34 ), ExtResource( 51 ), ExtResource( 30 ), ExtResource( 53 ), ExtResource( 36 ), ExtResource( 41 ) ],
"loop": true,
"name": "Idle",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 17.3208
height = 19.2622

[sub_resource type="CapsuleShape2D" id=3]
radius = 23.9796

[sub_resource type="CapsuleShape2D" id=4]
radius = 68.8362
height = 471.109

[node name="Tumatauenga" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.09, 0.09 )
frames = SubResource( 1 )
animation = "Falling"
frame = 2
playing = true

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
shape = SubResource( 2 )

[node name="GroundCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -14.2696, 0 )
enabled = true
cast_to = Vector2( 0, 24 )

[node name="GroundCheckRight" type="RayCast2D" parent="."]
position = Vector2( 14, 0 )
enabled = true
cast_to = Vector2( 0, 24 )

[node name="WallCheckLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 24, 0 )

[node name="WallCheckRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -24, 0 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
light_mask = 2
position = Vector2( 0, 6 )
shape = SubResource( 3 )

[node name="DetectingBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingBox"]
position = Vector2( -0.214661, 0.429283 )
rotation = 4.71239
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 32.5542, 9.59503 )
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
[connection signal="body_entered" from="DetectingBox" to="." method="_on_DetectingBox_body_entered"]
[connection signal="body_exited" from="DetectingBox" to="." method="_on_DetectingBox_body_exited"]
